--- a/2024/day20_osm/day20_osm.qmd
+++ b/2024/day20_osm/day20_osm.qmd
@@ -110,7 +110,7 @@ The latitude of Rome, Italy is 41.902782, and the longitude is 12.496366.
 ggplot() +
  geom_sf(data = streets$osm_lines,
          inherit.aes = FALSE,
-         color = "navy",
+         color = "white",
          linewidth = .5,
          alpha = .8) +
  geom_sf(data = small_streets$osm_lines,
@@ -118,18 +118,14 @@ ggplot() +
          color = "grey20",
          linewidth = .1,
          alpha = .8) +
-  geom_sf(data = br$osm_points,
+    geom_sf(data = br$osm_lines,
+          inherit.aes = FALSE,
+          color = "grey20") +
+    geom_sf(data = br$osm_points,
           inherit.aes = FALSE,
           color = "red",
           size = 1,
           alpha = .8) +
-    geom_sf(data = br$osm_points,
-          inherit.aes = FALSE,
-          color = "grey20",
-          shape=21,
-          stroke=0.1,
-          size = 1.2,
-          alpha = .9) +
   coord_sf(xlim=c(xmin,xmax),
          ylim=c(ymin,ymax),
            expand = FALSE) +
@@ -147,50 +143,39 @@ library(cowplot)
 
 # Main Map: Detailed View
 main_map <- ggplot() +
-  geom_sf(data = streets$osm_lines,
-          inherit.aes = FALSE,
-          color = "navy",
-          linewidth = .5,
-          alpha = .8) +
-  geom_sf(data = small_streets$osm_lines,
-          inherit.aes = FALSE,
-          color = "grey20",
-          linewidth = .1,
-          alpha = .8) +
-  geom_sf(data = br$osm_points,
-          inherit.aes = FALSE,
-          color = "red",
-          size = 1,
-          alpha = .8) +
-  geom_sf(data = br$osm_points,
-          inherit.aes = FALSE,
-          color = "grey20",
-          shape = 21,
-          stroke = 0.1,
-          size = 1.2,
-          alpha = .9) +
-  coord_sf(xlim = c(xmin, xmax),
-           ylim = c(ymin, ymax),
-           expand = FALSE) +
-  theme_void() +
-  theme(
-    text = element_text(family = "Gideon Roman"),
-    plot.background = element_rect(fill = "white", linewidth = 0.5),
-    panel.background = element_rect(fill = "#dbd3c5", linewidth = 1),
-    plot.margin = margin(10, 10, 40, 10, unit = "pt")
-  )
-
-# Inset Map: Overview of the Region
-inset_map <- ggplot() +
  geom_sf(data = streets$osm_lines,
          inherit.aes = FALSE,
-         color = "navy",
-         linewidth = .07,
+         color = "white",
+         linewidth = .5,
          alpha = .8) +
  geom_sf(data = small_streets$osm_lines,
          inherit.aes = FALSE,
          color = "grey20",
          linewidth = .1,
+         alpha = .8) +
+    geom_sf(data = br$osm_lines,
+          inherit.aes = FALSE,
+          color = "grey20") +
+    geom_sf(data = br$osm_points,
+          inherit.aes = FALSE,
+          color = "red",
+          size = 1,
+          alpha = .8) +
+  coord_sf(xlim=c(xmin,xmax),
+         ylim=c(ymin,ymax),
+           expand = FALSE) +
+  theme_void()+
+  theme(text=element_text(family="Gideon Roman"),
+        plot.background = element_rect(fill="white",linewidth=0.5),
+        panel.background = element_rect(fill="#dbd3c5",linewidth=1),
+        plot.margin = margin(10,10,40,10,unit = "pt"))
+
+# Inset Map: Overview of the Region
+inset_map <- ggplot() +
+ geom_sf(data = streets$osm_lines,
+         inherit.aes = FALSE,
+         color = "grey20",
+         linewidth = .07,
          alpha = .8) +
   geom_sf(data = br$osm_points,
           inherit.aes = FALSE,
@@ -208,11 +193,32 @@ inset_map <- ggplot() +
 # Combine Main Map with Inset Map
 combined_map <- ggdraw() +
   draw_plot(main_map) +
-  draw_plot(inset_map, x = 0.7, y = 0.7, width = 0.25, height = 0.25)  +
-  draw_label("Bike Roads in Rome",
+  draw_plot(inset_map, x = 0.7, y = 0.7, 
+            width = 0.3, height = 0.25)  +
+   draw_line(x=c(0.055,0.945),y=c(0.169,0.169),
+            size=20,
+            color="#dedede",
+            alpha=0.7)+
+  draw_line(x=c(0.3,0.7),y=c(0.22,0.22),
+            size=1)+
+  draw_label("Bicycle Road",
              x=0.5,y=0.19,
              size=14.5,
              fontface = "bold",
+             fontfamily = "Gideon Roman")+
+  draw_label("41.9027°N/12.4964°E",
+             x=0.5,y=0.149,
+             size=6,
+             fontfamily = "Gideon Roman",
+             fontface = "bold") +
+  draw_label("OSM key: Bicycle Road",
+             x=0.5,y=0.125,
+             size=5,
+             fontfamily = "Gideon Roman") +
+  draw_label("#30DayMapChallenge 2024 Day 20: osmdata\nDataSource: {osmdata}: Rome, Italy | Map: Federica Gazzelloni (@fgazzelloni)",
+             x=0.5,y=0.07,
+             size=5,
+             lineheight = 1.5,
              fontfamily = "Gideon Roman")
 
 combined_map
@@ -222,49 +228,10 @@ combined_map
 
 ```{r}
 # save the base map
-ggsave("base_map.png", width = 6, height = 6)
-```
-
-Draw the map-viz
-
-```{r}
-library(cowplot)
-
-ggdraw()+
-  draw_image("data/base_map.png")+
-  draw_line(x=c(0.055,0.945),y=c(0.169,0.169),
-            size=25,color="#dedede",alpha=0.7)+
-  draw_line(x=c(0.3,0.7),y=c(0.22,0.22),
-            size=1)+
-  draw_label("Rome",
-             x=0.5,y=0.19,
-             size=14.5,
-             fontface = "bold",
-             fontfamily = "Gideon Roman")+
-  draw_label("41.9027°N/12.4964°E",
-             x=0.5,y=0.149,
-             size=5,
-             fontfamily = "Gideon Roman") +
-  draw_label("OSM key: Military",
-             x=0.5,y=0.125,
-             size=4,
-             fontfamily = "Gideon Roman") +
-  draw_label("#30DayMapChallenge 2022 Day 8: osmdata\nDataSource: {osmdata}: Rome, Italy | Map: Federica Gazzelloni (@fgazzelloni)",
-             x=0.5,y=0.07,
-             size=4,
-             lineheight = 1.8,
-             fontfamily = "Gideon Roman")
-
-# save final version
-ggsave("day8_openstreetmap.png", 
-       dpi=150,
-       width = 5.8, 
+ggsave("day20_osm.png", 
+       dpi=320,
+       width = 10, 
        height = 6,
        bg="white")
-```
-
-
-```{r}
-Copyright © 2023 Federica Gazzelloni
 ```
 
