--- a/2025/day4_my_data/day4_my_data.qmd
+++ b/2025/day4_my_data/day4_my_data.qmd
@@ -59,6 +59,11 @@ deaths_map_data <- deaths %>%
 deaths_map_data %>% count(cause)
 ```
 
+```{r}
+deaths_map_data %>% count(location)
+```
+
+
 ### CamCorder and ShowText 
 
 
